# bedrock-agentcore-akeyless-runtime

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
docs/: AKEYLESS_SETUP.md  AWS_CO_PUBLISHED_ARTICLE.md  DEPLOYMENT.md  INSTALL.md  MAINTAINER.md  PYPI_PUBLISHING.md
examples/: README.md
examples/gateway-lambda/: handler.py  setup_gateway_target.py
examples/hybrid-agent/: agent.py  requirements.txt
examples/mcp-server/: requirements.txt  server.py
examples/strands-agent/: agent.py  requirements.txt
src/akeyless_agentcore/: __init__.py  auth.py  cache.py  client.py  config.py  paths.py
src/akeyless_agentcore/tools/: __init__.py  gateway.py  mcp.py  service.py  strands.py
tests/: test_cache.py  test_paths.py  test_tools.py
