[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akeyless-agentcore-runtime"
version = "0.2.0"
description = "Fetch Akeyless secrets at runtime on AWS Bedrock AgentCore using cloud identity authentication"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Akeyless Community" }]
keywords = ["akeyless", "bedrock", "agentcore", "secrets", "aws", "runtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "akeyless>=5.0.0",
    "akeyless-cloud-id>=0.3.1",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.9.0",
]
strands = [
    "strands-agents>=0.1.0",
]
gateway = [
    "bedrock-agentcore-starter-toolkit>=0.1.0",
]
all = [
    "mcp>=1.9.0",
    "strands-agents>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
akeyless-agentcore-mcp = "akeyless_agentcore.tools.mcp:run_mcp_server"

[project.urls]
Homepage = "https://github.com/akeyless-community/bedrock-agentcore-akeyless-runtime"
Repository = "https://github.com/akeyless-community/bedrock-agentcore-akeyless-runtime"

[tool.hatch.build.targets.wheel]
packages = ["src/akeyless_agentcore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
